[package]
name = "green-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws", "headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tower-service = "0.3.2"
tower-lsp = "0.18.0"
async-tungstenite = { version = "0.18", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
ws_stream_tungstenite = { version = "0.9", features = ["tokio_io"] }
tracing = "0.1"
ezsockets = { version = "0.4", features = ["axum"] }
simple-websockets = "0.1.5"
#sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"]}